# ipcv

./: README.md
experiments/: .gitignore  README.md  exp-01-basic-img-handling.ipynb  exp-02-basic-detections.ipynb  exp-03-calibration.ipynb  exp-04-hist.ipynb  exp-05-skin-color-detection.ipynb  exp-06-warping&est.ipynb  exp-07-motion-tracking.ipynb  exp-08-yolo-obj-det.ipynb  exp-09-stereo-vision&depth-est.ipynb  exp-10-AR.ipynb
mini-project-number-plate-detection/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
mini-project-number-plate-detection/src/: dataset_loader.py  main.py  ocr.py  plate_detection.py  preprocessing.py
