[project]
name = "number-plate-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==2.19.1",
    "matplotlib==3.7.5",
    "numpy==1.24.4",
    "opencv-contrib-python>=4.8.1.78",
    "pillow==10.3.0",
    "pytesseract==0.3.10",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]
